Made HTML page generate and updated README.md file. One last thing I need to do is produce and link a GIF.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,31 @@
     <div class="container">
         <div class="row">
             <div class="team-area col-12 d-flex justify-content-center">
-                {{ team }}
+                <div class="card employee-card">
+  <div class="card-header">
+      <h2 class="card-title">sfsdf</h2>
+      <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
+  </div>
+  <div class="card-body">
+      <ul class="list-group">
+          <li class="list-group-item">ID: sdfsdf</li>
+          <li class="list-group-item">Email: <a href="mailto:sdfsdf">sdfsdf</a></li>
+          <li class="list-group-item">Office number: sdfs</li>
+      </ul>
+  </div>
+</div><div class="card employee-card">
+  <div class="card-header">
+      <h2 class="card-title">asdas</h2>
+      <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+  </div>
+  <div class="card-body">
+      <ul class="list-group">
+          <li class="list-group-item">ID: asdasd</li>
+          <li class="list-group-item">Email: <a href="mailto:asdas">asdas</a></li>
+          <li class="list-group-item">GitHub: <a href="https://github.com/sdas" target="_blank" rel="noopener noreferrer">sdas</a></li>
+      </ul>
+  </div>
+</div>
             </div>
         </div>
     </div>
