Added a gif to README.md

--- a/index.html
+++ b/index.html
@@ -25,26 +25,62 @@
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
   <div class="card-header">
-      <h2 class="card-title">sfsdf</h2>
+      <h2 class="card-title">Weston</h2>
       <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
   </div>
   <div class="card-body">
       <ul class="list-group">
-          <li class="list-group-item">ID: sdfsdf</li>
-          <li class="list-group-item">Email: <a href="mailto:sdfsdf">sdfsdf</a></li>
-          <li class="list-group-item">Office number: sdfs</li>
+          <li class="list-group-item">ID: 1111</li>
+          <li class="list-group-item">Email: <a href="mailto:weston@rose">weston@rose</a></li>
+          <li class="list-group-item">Office number: 2</li>
       </ul>
   </div>
 </div><div class="card employee-card">
   <div class="card-header">
-      <h2 class="card-title">asdas</h2>
+      <h2 class="card-title">sdasdasd</h2>
       <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
   </div>
   <div class="card-body">
       <ul class="list-group">
           <li class="list-group-item">ID: asdasd</li>
-          <li class="list-group-item">Email: <a href="mailto:asdas">asdas</a></li>
-          <li class="list-group-item">GitHub: <a href="https://github.com/sdas" target="_blank" rel="noopener noreferrer">sdas</a></li>
+          <li class="list-group-item">Email: <a href="mailto:asdasd">asdasd</a></li>
+          <li class="list-group-item">GitHub: <a href="https://github.com/asdas" target="_blank" rel="noopener noreferrer">asdas</a></li>
+      </ul>
+  </div>
+</div>,<div class="card employee-card">
+  <div class="card-header">
+      <h2 class="card-title">asdasd</h2>
+      <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+  </div>
+  <div class="card-body">
+      <ul class="list-group">
+          <li class="list-group-item">ID: asdasd</li>
+          <li class="list-group-item">Email: <a href="mailto:asdasd">asdasd</a></li>
+          <li class="list-group-item">GitHub: <a href="https://github.com/vbnvbn" target="_blank" rel="noopener noreferrer">vbnvbn</a></li>
+      </ul>
+  </div>
+</div><div class="card employee-card">
+  <div class="card-header">
+      <h2 class="card-title">jkhjkh</h2>
+      <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+  </div>
+  <div class="card-body">
+      <ul class="list-group">
+          <li class="list-group-item">ID: sdsd</li>
+          <li class="list-group-item">Email: <a href="mailto:bnvb">bnvb</a></li>
+          <li class="list-group-item">School: sdfds</li>
+      </ul>
+  </div>
+</div>,<div class="card employee-card">
+  <div class="card-header">
+      <h2 class="card-title">dfsdf</h2>
+      <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+  </div>
+  <div class="card-body">
+      <ul class="list-group">
+          <li class="list-group-item">ID: jkjer</li>
+          <li class="list-group-item">Email: <a href="mailto:lili">lili</a></li>
+          <li class="list-group-item">School: vbv</li>
       </ul>
   </div>
 </div>
